Add export of com.sun.javafx.event to org.jabref (#11195)
* Add export of com.sun.javafx.event to org.jabref

* Works

* Remove other statements

* Add comment

* Remove unneeded exports

* Add some "--opens", too

* Blindly add --add-opens=javafx.graphics/javafx.scene=org.jabref.merged.module

* Remove some controlsfx

* Add missing ,

* Try Corretto

* Try to pass build arguments

* Port

* Try " at other place

* Try other way

* Add hint

* Update build.gradle

---------

Co-authored-by: Carl Christian Snethlage <50491877+calixtus@users.noreply.github.com>